web/book/tests/examples/snapshots/examples__book__language-features__target__examples__0.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.postgres\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10

